job successfully runs jmeter test

--- a/jmeter-base/job.yaml
+++ b/jmeter-base/job.yaml
@@ -3,8 +3,6 @@ kind: Job
 metadata:
   name: jmeter-base
 spec:
-  parallelism: 1
-  completions: 1
   template:
     metadata:
       name: jmeter-base
@@ -12,5 +10,5 @@ spec:
       containers:
       - name: jmeter-base
         image: 172.30.154.153:5000/jmeter/rhel-jmeter:latest
-        command: ["pwd"]
+        command: ["./runjob.sh"]
       restartPolicy: Never
